# models/product.go
@@ -3,12 +3,17 @@ package models
 import "time"
 
 type Product struct {
-	ID          uint      `json:"id"`
-	Name        string    `json:"name"`
-	Description string    `json:"description"`
-	Price       uint      `json:"price"`
-	CategoryID  uint      `json:"category_id"`
-	CreatedAt   time.Time `json:"created_at"`
-	UpdatedAt   time.Time `json:"updated_at"`
-	Category    Category  `json:"-"`
+	ID          uint       `json:"id"`
+	Name        string     `json:"name"`
+	Description string     `json:"description"`
+	Price       uint       `json:"price"`
+	CategoryID  uint       `json:"category_id"`
+	CreatedAt   time.Time  `json:"created_at"`
+	UpdatedAt   time.Time  `json:"updated_at"`
+	Category    Category   `json:"-"`
+	Likes       []Like     `json:"-"`
+	Carts       []Cart     `json:"-"`
+	Purchases   []Purchase `json:"-"`
+	Ratings     []Rating   `json:"-"`
+	Comments    []Comment  `json:"-"`
 }
